@@ -3,6 +3,6 @@ AUX mico-1.4.1.patch 763 RMD160 ac0f242ccfd7b37a4c47f604d7be37a72d76320f SHA1 b3
 AUX openfoam-1.4.1_p20071028.patch 599007 RMD160 5f50b78e8e28cf734ac1c6f14c3623771d4c82e1 SHA1 4c2c543aa606dbc75c7e1805953c809946708d43 SHA256 6233d0c2d6ff3c6a9c0d4c2470ba4b1c96215bc3a9bb198343410556545ad8ae
 DIST OpenFOAM-1.4.1.General.gtgz 148526808 RMD160 e25d8bdfa63f15eeeb7b9f1cef09cc26fb7bef74 SHA1 56bbbf5b33c49d08cda35088a65b24d7dc59014f SHA256 c765b36639b42c737bc9ba1ac13c0f66efe20ee4a9f71a6ef987e86ebd50da28
 DIST ParaView-2.6.2.tar.gz 75658768 RMD160 068f3fbfea17166d34c488b4e6bd8d8fb07d3cd9 SHA1 ac5efb1c850e89b76dda4f28ecfa4575e45aa22e SHA256 de7cbd808e1ab1730ad87436d30c0a752096a65fe9aa6b82f35a39fc3b67d7c7
-EBUILD openfoam-1.4.1_p20071028.ebuild 14958 RMD160 4ea627f1c602890618c0e31bd42f54950247ccbc SHA1 64df8b53cba63e8f73ab71b4df34d60cc39591a7 SHA256 31597971c7b01dac4f64e58db11a575513ef29ba65137596472a0a0eda3cd52f
-MISC ChangeLog 735 RMD160 3fcc1042321afe601c1e6b02e83af5af7ce3c1bf SHA1 e5b09e374e3e60fe7c132ec3be37b3e4a2bab00b SHA256 20e3ba9930a0b36c1bdc02e85b2071eab07f1d36b90cd78959272c61bf64c293
+EBUILD openfoam-1.4.1_p20071028.ebuild 15007 RMD160 251081bb57113158fc26f48943e5a2ced27f8250 SHA1 e191d9a7c9219882552b8700441b72e31bda1c8e SHA256 22634a443abc432f92f6e636d0aca3e8e8e6d4f22e79db69b30d1da1a80374bf
+MISC ChangeLog 874 RMD160 9498d7787118bb003eb2b32ac43c86c3a15f2abd SHA1 07e9ad6ae961ac68f2b33e116a6617ccdb04502b SHA256 33936602adfe6d446ec78c391336899705a0ac613bcb82110d29f77f28449913
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
